mule-management-console/v/3.2/working-with-logs.adoc
= 使用日志

使用管理控制台时可以查看三种类型的日志：

*  *Mule ESB log*。要在管理控制台中查看您要监控的Mule ESB实例的日志文件，请单击服务器选项卡上的Mule ESB名称，单击文件选项卡，然后单击`mule.log`文件。此日志文件提供有关Mule实例启动的详细信息，引发的任何错误等。
*  *Management console logs*。管理控制台本身会生成一些特定于控制台功能的日志文件。例如，`mmc-shell-scripts.log`文件提供有关您在管理控制台中运行的任何shell脚本的信息（请参见下文）。当您将管理控制台部署到Tomcat时，这些日志文件位于应用程序服务器的日志目录中，例如`<TomcatHome>/logs`。
*  *Container logs*。您在其中部署管理控制台的容器将生成自己的日志文件，以提供诸如MMC WAR文件的部署成功等信息。有关这些日志的信息，请参阅您的容器的文档。有关登录Tomcat的信息，请参阅 http://wiki.apache.org/tomcat/FAQ/Logging#Q1[Apache日志记录常见问题]。

==  Shell脚本日志

shell脚本日志（`mmc-shell-scripts.log`）提供管理控制台中任何 link:/mule-management-console/v/3.2/automating-tasks-using-scripts[您创建的脚本]的信息。 shell脚本日志的默认日志记录级别是INFO，您可以在`log4j.properties`文件（例如Tomcat中的`webapps/console/WEB-INF/classes/log4j.properties`）中修改此信息。您可以修改`admin.shell.script`类别以更改所有控制台shell脚本的日志记录输出，或修改单个脚本的输出，修改`admin.shell.script.[mmc:<scriptName>]`类别，其中`[mmc:<scriptName>]`是该脚本被方括号包围，任何空格都被反斜杠（例如`admin.shell.script.[mmc:My\ Script]`）转义。

*NOTE*：
如果您在管理员shell中输入脚本并在保存脚本之前单击*Evaluate*，则该脚本的日志记录类别为`admin.shell.script.[mmc:$shell]`。

link:/mule-management-console/v/3.2/customizing-the-dashboard[<<上一页：*自定义仪表板*]

link:/mule-management-console/v/3.2/automating-tasks-using-scripts[下一步：*使用脚本自动执行任务* >>]
